small changes to intro

--- a/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
+++ b/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
@@ -57,43 +57,33 @@ To check on when editing writing:
 
 \section{Introduction}
 
-\kg{Updates from KG:
-\begin{itemize}
-\item Added in Heike's suggestions to the first paragraph and made some changes of my own 
-\item Divided the first paragraph into two parts and added a discussion on reasons why interpretability is beneficial
-\item Switched the two model uses from ``interpretation and prediction" to ``inference and prediction" to distinguish between interpretation and inference
-\item Added most of the references (still need to add the ones about model explainers)
-\item Fixed some wordings here and there
-\item Expanded on the importance of assessing model explainers
-\item Added an outline of the rest of the paper
-\end{itemize}
-At some point, I plan to return to this section to work on the wording, but I finally have it at a point where it contains the ideas that I had intended. Heike, what do you think of it at this point?}\\
-\\
 In the field of statistics, there are two main uses for models: inference and prediction. Machine learning models are often used for the latter purpose. While these models have been proven to perform well in a wide range of prediction problems, their accuracy comes at the cost of interpretability. They are often complex algorithms that are good at identifying patterns in the data but lack a functional form, so it not possible to directly interpret them. As a result, they produce predictions that lack an explanation, which has earned them the reputation of being ``black box models".
 
-\kg{The ability to interpret a model serves multiple purposes. When a model is first fit, interpretations help to diagnose the model. Knowing which variables influence a prediction makes it possible to determine if the predictions are based on reasonable variables. If not, appropriate adjustments to the model can be made. After a model has been diagnosed, the explanations for the predictions are used to understand the underlying mechanism that produced the data and provide an argument for why the predictions should be trusted. In some areas of application, this ability to be able to explain the results from a model is critical.}
+The ability to interpret a model serves multiple purposes. When a model is first fit, interpretations help to diagnose the model. Knowing which variables influence a prediction makes it possible to determine if the predictions are based on reasonable variables. If not, appropriate adjustments to the model can be made. After a model has been diagnosed, the explanations for the predictions are used to understand the underlying mechanism that produced the data and provide an argument for why the predictions should be trusted. In some areas of application, this ability to be able to explain the results from a model is critical.
 
 The forensics sciences and the heath care industry are two areas that have benefited from machine learning but have an obvious need for explainable predictions. For example, \citet{aoas} discuss the use of a random forest model in the forensics sciences to determine whether two bullets were fired from the same gun. \citet{yu:2018} describe how healthcare has advanced through the use of machine learning in ways such as using neural networks to automate medical image diagnoses and implementing Bayesian networks to predict clinical outcomes. In both of these fields, the decisions made based on the results of the machine learning models can greatly impact people's lives. If it is not possible to explain the output from a model, it becomes questionable whether to rely on the predictions to make important decisions.
 
 As an example, suppose that forensics examiners are trying to determine if a bullet used in a crime was fired from the gun that belongs to a suspect in the investigation. A random forest model could be used to produce a probability that the bullet was fired from the gun under question. Even if the model returns a high probability of a match, it will be difficult for a jury to trust the results from the model when deciding whether to convict the suspect without the forensics examiners having the ability to explain which factors in the model led to the high probability.
 
-The European Union has taken the desire to provide explanations from machine learning models a step further. In May 2018, the General Data Protection Regulation (GDPR) went into effect \footnote{https://eugdpr.org/the-regulation/gdpr-faqs/}. The regulation includes a policy that gives the right for individuals affected by decisions made via automated algorithms to understand the logic behind the decisions being made. As \citet{goodman:2016} point out, this regulation has a great effect on the way that machine learning algorithms are used to make decisions. The wording of the policy leaves room for interpretation, but \hh{the authors} believe that, at a minimum, \hh{the regulations} will require that an explanation of how the input variables relate to the predictions be provided.
+The European Union has taken the desire to provide explanations from machine learning models a step further. In May 2018, the General Data Protection Regulation (GDPR) went into effect \footnote{https://eugdpr.org/the-regulation/gdpr-faqs/}. The regulation includes a policy that gives the right for individuals affected by decisions made via automated algorithms to understand the logic behind the decisions being made. As \citet{goodman:2016} point out, this regulation has a great effect on the way that machine learning algorithms are used to make decisions. The wording of the policy leaves room for interpretation, but the authors believe that, at a minimum, the regulations will require that an explanation of how the input variables relate to the predictions be provided.
 
-As a result of the movement to produce explainable predictions, an area of research has emerged focusing on developing ways to explain output from machine learning algorithms. One approach that is being taken is to develop model explainers that provide insight into the performance of the complex model (reference). A model explainer is a method that is separate from the model but uses the model and output from the model to shed light on the process that the model goes through to produce predictions. LIME (local interpretable model\hh{-agnostic} explanations) is one such model explainer \citep{ribeiro:2016}.
+As a result of the movement to produce explainable predictions, an area of research has emerged focusing on developing ways to explain output from machine learning algorithms. One approach that is being taken is to develop model explainers that provide insight into the performance of the complex model (reference). A model explainer is a method that is separate from the model but uses the model and output from the model to shed light on the process that the model goes through to produce predictions. LIME (local interpretable model-agnostic explanations) is one such model explainer \citep{ribeiro:2016}.
 
 While some model explainers are focused on understanding a model at the global level, LIME is designed to explain the model locally for a single prediction of interest. \hh{Additionally, LIME} was designed to work with any model and to produce easily understandable explanations. \hh{XXX a citation might be good here for local and agnostic} Conceptually, LIME fits a simple interpretable model, referred to as the explainer, that is meant to capture the behavior of the complex ``black box model" in a local region around a prediction of interest. The interpretation of the simple model is then used to explain the variables that most influenced the prediction made by the complex model.
 
 \hh{At a conceptual level, explainer models add another level of complexity to predictive models: in trying to explain the  black box model, a simpler explainer model is added. To be able to trust in the explanation it is imperative to check that the explainer model is reliable and does not over-simplify the black-box model. }
 It is important to keep in mind that the explanation produced by the explainer is not a direct interpretation of the complex model. Instead, it is based on a model that is trying to mimic a part of the complex model. Thus, it is necessary to ask the question, ``How reliable is the explanation?". One way to answer this question is to understand how well the explainer model approximates the complex model.
 
-The current implementations of LIME use a linear regression model as the explainer model (references to R and Python packages). These implementations are relying on the assumption that the relationship between the complex model predictions and the features is linear in a local region. \hh{XXX don't get into a discussion of locally not linear models. From theory we know that every function can be approximated locally by a linear function. From a practical point of view the local area might be too small to be relevant.}
-\kg{It is possible to imagine scenarios where this is not the case. Thus, it is important to assess this assumption in order to trust the explanations produced by LIME. Additionally, the implementations offer various input settings, but little work has been done to provide advice on how to specify the settings in practice (look more into this). An assessment of the explanations could also help to determine which settings produce the explainer model with the best approximation of the complex model.}
+The current implementations of LIME use a linear regression model as the explainer model (references to R and Python packages). These implementations are relying on the assumption that the relationship between the complex model predictions and the features is linear in a local region. It is important to assess this assumption in the local region of interest in order to trust the explanations produced by LIME. Additionally, the implementations offer various input settings, but little work has been done to provide advice on how to specify the settings in practice (look more into this). An assessment of the explanations could also help to determine which settings produce the explainer model with the best approximation of the complex model.
 
 In this paper, we will present some visualizations tools to assess the explanations from LIME. While predictive models are used in both regression and classification settings, we will focus on the classification setting for this paper. For additional simplicity, we will only discuss the case with a dichotomous response variable, but we believe that the work is adaptable for other situations.
 
 Section \ref{background} provides some background on explainer models that have been developed, a description of the LIME algorithm, and the current implementations of LIME. In Section \ref{methods}, we discuss ways to assess the LIME explainer model and introduces our visualization tools. Section \ref{application} demonstrates the use of our diagnostic tools with a logistic regression model fit to the iris data (? \hh{urgh. but we can decide on that later} ) and a random forest model fit to a forensics bullet matching dataset. To conclude, Section \ref{discussion} reviews the importance of assessing the LIME explainer model, discusses how the results from the example provide possible insights into the workings of LIME, and suggests future research directions.
 
 \section{Background} \label{background}
+
+
+
 
 \kg{Just putting this here for now - needs lots of work or I may even remove it:} \hh{Accepted best practice for all} predictive models is \hh{that during the model fitting process}, the data is divided into training and testing portions. The training data is used to fit the complex model, and the testing data is used to assess the model. \hh{This is done to prevent overfitting and to get a more accurate assessment of the prediction error of the model.} The complex model is then applied to the features in the testing data, and the resulting predictions are compared to ground truth. Of \hh{particular} interest during this assessment are the cases when the model is wrong. In the dichotomous response classification case, there are two ways in which the model can be wrong. The model can make a type I error in which..., or the model can make a type II error in which...
 
