couple of edits

--- a/papers/lime_diagnostics/references.bib
+++ b/papers/lime_diagnostics/references.bib
@@ -1,3 +1,11 @@
+@Manual{lime,
+    title = {{lime: Local Interpretable Model-Agnostic Explanations}},
+    author = {Thomas Lin Pedersen and Micha\"el Benesty},
+    year = {2018},
+    note = {R package version 0.4.0},
+    url = {https://CRAN.R-project.org/package=lime},
+  }
+  
 @article{AFIS,
   title={Automated Firearms Identification System (AFIDS): Phase I},
   author = {R. J. Blackwell and  E. P. Framan},
