--- a/README.Rmd
+++ b/README.Rmd
@@ -14,13 +14,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 ## Talking points
 
-- poster:
-  - how to cut down on the words?
-  - formula for MSE?
-  - do you have any ideas for better displaying the plots and descriptions in the middle column?
-  - what do you think of the conceptual depiction of LIME?
-  - recommendations for keeping figure text the same size?
-  - any other thoughts for improvement?
+- opinions on saving pdf files to github - if no - what to do?
 - adding a random noise variable to the model to see if LIME ever chooses it as an important variable
 - can I remove some of the sources from the references file that I am not going to use?
 
