--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 - opinions on saving pdf files to github - if no - what to do?
 - adding a random noise variable to the model to see if LIME ever chooses it as an important variable
 - can I remove some of the sources from the references file that I am not going to use?
+- have you heard of: Journal of Data Science, Statistics, and Visualisation (jdssv.org)
 
 ## To Do List
 
