--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 ## Talking points
 
+- Have you heard of trelliscope: https://hafen.github.io/trelliscopejs/#trelliscope
+- I think I may have convinced Adam to talk at graphics group if we end up scheduling graphics group on Thursday
 - opinions on saving pdf files to github - if no - what to do?
 - adding a random noise variable to the model to see if LIME ever chooses it as an important variable
 - can I remove some of the sources from the references file that I am not going to use?
