added another talking point

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,7 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 ## Talking points
 
+- see email from Shar
 - Have you heard of trelliscope: https://hafen.github.io/trelliscopejs/#trelliscope
 - I think I may have convinced Adam to talk at graphics group if we end up scheduling graphics group on Thursday
 - opinions on saving pdf files to github - if no - what to do?
